# wabot-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISTRIBUTION.md  LICENSE  README.md  main.py  plan.md  pyproject.toml
.claude/: launch.json
.claude/agents/: ux-designer.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
configs/: mcp.composio.json  mcp.example.json
data/: mcp_registry.json  skills_registry.json
deploy/cloudflared/: config.yml.example
deploy/systemd/: cloudflared.service  vignesh-agent.service  wabot-agent.service
docs/: PLAN-dynamic-subagent-dashboard.md  composio-mcp-setup.md  composio-setup.md  mem0-setup.md  prompt.md  test-scenarios.md  web-agent-setup.md
docs/design/: simplification-roadmap.md  sr-1-settings-service.md  sr-2-domain-layer.md  sr-3-use-chat-stream.md  sr-4-db-migrations.md
evals/: cases.jsonl  run_local.py
knowledge/templates/: instructions.md  memory.md
scripts/: apply-production-hygiene.py  bootstrap-vps.sh  build-web.sh  check-production-hygiene.sh  deploy-to-vignesh.sh  dump_schemas.py  generate_diagrams.py  install-from-release.sh  install-vps-processing-tools.sh  package-release.sh  setup-cloudflared.sh  setup-firecrawl-vps.sh  verify-phase1.sh
skills/julia-cs/: SKILL.md
static/: app.js  index.html  styles.css
tests/: conftest.py  test_agent.py  test_agent_events.py  test_agent_hooks.py  test_api.py  test_app_paths.py  test_audio_transcribe.py  test_auth_logging.py  test_auto_reply.py  test_cache_paths.py  test_cf_access.py  test_codex_auth.py  test_codex_device_login.py  test_codex_model.py  test_codex_models.py  test_composio_tools.py  test_config.py  test_config_inbound_auth.py  test_context_management.py  test_db_foreign_keys.py  test_file_processing.py  test_inbound_concurrency.py  test_inbound_media.py  test_inbox_tools.py  test_knowledge_api.py  test_knowledge_integration.py  test_knowledge_mem0_integration.py  test_knowledge_store.py  test_llm_provider.py  test_logging_config.py  test_login.py  test_mcp.py  test_media_download_retry.py  test_media_tools.py  test_mem0_store.py  test_mem0_tools.py  test_memory.py  test_middleware.py  test_models.py  test_outbound_tasks.py  (+36 more)
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+376 files in other folders)
